// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkButton should render with many props assigned 1`] = `
<a
  className="Button test-class secondary fullWidth"
  href="https://tests.com"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  Test
</a>
`;

exports[`LinkButton should render with required props 1`] = `
<a
  className="Button primary"
  href="https://tests.com"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  Test
</a>
`;
